removes footer logo, fixes navbar styling on small screen size

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -16,7 +16,6 @@
     }
 
     .footer-email {
-      margin-left: 50px;
       font-size: 1.2em;
       color: $light-gray;
       text-decoration: none;
