--- a/_sass/components/_splash.scss
+++ b/_sass/components/_splash.scss
@@ -56,6 +56,7 @@
   }
 
   &.-home {
+    position: relative;
     background: linear-gradient(to bottom, rgba(22, 25, 30, 0.4), rgba(25, 29, 34, 0.5));
 
     &:before {
